--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHANGE</title>
+    <link rel="favicon" href="/favicon.ico"></link>
+    <title>Purrfect Paws Pet Sitting</title>
 </head>
 <body>
     <div id="root"></div>
